--- a/config.json
+++ b/config.json
@@ -89,11 +89,11 @@
       "api": "https://hhzyapi.com/api.php/provide/vod/",
       "name": "豪华资源"
     },
-    "yinghua": {
-      "api": "https://m3u8.apiyhzy.com/api.php/provide/vod/",
-      "name": "樱花动漫"
+    "feifan": {
+      "api": "http://api.ffzyapi.com/api.php/provide/vod/",
+      "name": "非凡"
     },
-    "haohua": {
+    "suoni": {
       "api": "https://suoniapi.com/api.php/provide/vod/",
       "name": "索尼"
     }
